--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - POSTGRES_HOST=postgres
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - SPARK_MASTER_URL=spark://spark-master:7077
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_SECURE=false
     volumes:
       - ./src:/app/src
       - ./tests:/app/tests
@@ -18,6 +22,7 @@ services:
       - postgres
       - kafka
       - spark-master
+      - minio
 
   postgres:
     image: postgres:13
@@ -82,5 +87,39 @@ services:
     depends_on:
       - spark-master
 
+  minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server --console-address ":9001" /data
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
+  simulation:
+    build:
+      context: ./tools/simulation
+      dockerfile: Dockerfile
+    environment:
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_SECURE=false
+      - API_URL=http://api:8000
+    volumes:
+      - ./tools/simulation:/app
+    depends_on:
+      - minio
+      - api
+
 volumes:
   postgres_data:
+  minio_data:
